white space fixes

--- a/website/src/app/components/Question/Question.css
+++ b/website/src/app/components/Question/Question.css
@@ -61,4 +61,9 @@
   .faq-title {
     font-size: 36px;
   }
+
+  .bottom-half p {
+    margin-left: 45px;
+    line-height: 22px;
+  }
 }
